Fix Qt6 compatability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ target_link_libraries(${EXECUTABLE_NAME} PRIVATE
     Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Network
     Qt${QT_VERSION_MAJOR}::Widgets
+    Qt${QT_VERSION_MAJOR}::WebEngineCore
     Qt${QT_VERSION_MAJOR}::WebEngineWidgets)
 
 set_target_properties(${EXECUTABLE_NAME} PROPERTIES
